--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@
 
 
 :root{
-
+    max-width: 100vw;
     --header-font: "Abhaya Libre", serif;
     --text-font: "ABeeZee", sans-serif;
     --btn-bg: #ffffff;
@@ -19,11 +19,12 @@
 * {
     margin: 0;
     padding: 0;
-    max-width: 100%;
+    max-width: 100vw;
 }
 
 
 body{
+    max-width: 100vw;
     margin: 0;
     padding: 0;
     font-family: var(--text-font);
